@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-08-11" />
+<meta name="date" content="2010-08-13" />
 <style type="text/css">
 
 /*
@@ -139,9 +139,9 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-08-11</td></tr>
+<td>2010-08-13</td></tr>
 <tr><th class="docinfo-name">Version:</th>
-<td>0.19.1</td></tr>
+<td>0.19.2</td></tr>
 </tbody>
 </table>
 <p>Copyright © 2005-2010</p>
@@ -5056,7 +5056,7 @@ bsd, gpl, snippets.</td>
 </tr>
 <tr><td>geanyversion</td>
 <td>The actual Geany version, e.g.
-&quot;Geany 0.19.1&quot;.</td>
+&quot;Geany 0.19.2&quot;.</td>
 <td>file templates, file header,
 function description, ChangeLog entry,
 bsd, gpl, snippets.</td>
@@ -5339,7 +5339,7 @@ editing the file, to build the HTML document to see how your changes
 look, run &quot;<tt class="docutils literal"><span class="pre">make</span> <span class="pre">doc</span></tt>&quot; in the subdirectory <tt class="docutils literal"><span class="pre">doc</span></tt> of Geany's source
 directory. This regenerates the <tt class="docutils literal"><span class="pre">geany.html</span></tt> file. To generate a PDF
 file, use the command &quot;<tt class="docutils literal"><span class="pre">make</span> <span class="pre">pdf</span></tt>&quot; which should generate a file called
-geany-0.19.1.pdf.</p>
+geany-0.19.2.pdf.</p>
 <p>After you are happy with your changes, create a patch:</p>
 <pre class="literal-block">
 % svn diff geany.txt &gt; foo.patch
@@ -6098,7 +6098,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-08-13 14:20 UTC.
+Generated on: 2010-12-01 16:28 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
