@@ -1,4 +1,4 @@
-.. |(version)| replace:: 0.19.1
+.. |(version)| replace:: 0.19.2
 
 =======
  Geany
