@@ -1,5 +1,8 @@
 2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
+ * win32-config.h, geany.nsi, configure.ac, doc/geany.txt,
+   doc/geany.html, wscript, geany_private.rc:
+   Version bump.
  * New release: Geany 0.19.2.
 
 
